[tool.poetry]
name = "commitment"
version = "2.0.2"
description = "An incomplete Python 3 wrapper for the GitHub API"
authors = ["chris48s"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chris48s/commitment"
homepage = "https://github.com/chris48s/commitment"

[tool.poetry.dependencies]
python = "^3.6"
requests = "2.*"

[tool.poetry.dev-dependencies]
coverage = "^6.0"
isort = { version = "^5.8", python = "^3.6.2" }
flake8 = "^3.9.2"
black = { version = "==21.9b0", allow-prereleases = true, python = "^3.6.2" }

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
