[tool.poetry]
name = "commitment"
version = "3.0.0"
description = "An incomplete Python 3 wrapper for the GitHub API"
authors = ["chris48s"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chris48s/commitment"
homepage = "https://github.com/chris48s/commitment"

[tool.poetry.dependencies]
python = "^3.7"
requests = "2.*"

[tool.poetry.dev-dependencies]
coverage = "^6.5"
isort = "^5.10"
flake8 = "^5.0.4"
black = "==22.8.0"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
