[project]
name = "commitment"
version = "4.0.0"
description = "An incomplete Python 3 wrapper for the GitHub API"
authors = [{name = "chris48s"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests==2.*",
]

[tool.poetry.group.dev.dependencies]
coverage = "7.10.5"
isort = "6.0.1"
flake8 = "7.3.0"
black = "25.1.0"

[project.urls]
Home = "https://github.com/chris48s/commitment"
Source = "https://github.com/chris48s/commitment"

[tool.poetry]
requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.masonry.api"
